tests/ui/rfcs/rfc-2632-const-trait-impl/issue-90052.stderr
error: `~const` is not allowed here
  --> $DIR/issue-90052.rs:6:22
   |
LL | fn foo<T>() where T: ~const Bar {}
   |                      ^^^^^^^^^^
   |
note: this function is not `const`, so it cannot have `~const` trait bounds
  --> $DIR/issue-90052.rs:6:4
   |
LL | fn foo<T>() where T: ~const Bar {}
   |    ^^^

error: aborting due to previous error

